--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Odin Recipes</h1>
     
     <a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a>
+    <a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a>
 
 
 
