completed ribs.html and added link to index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a>
     <a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a>
+    <a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a>
 
 
 
