added cookie recipe with images and updated index

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    
-    <a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a>
-    <a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a>
-    <a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a>
+    <ul>
+        <li><a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a></li>
+        <li><a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a></li>
+        <li><a href="../odin-recipes/recipes/cookies.html">Best Chocolate Chip Cookies You've Never Had in Your Life</a></li>
+    </ul>
 
 
 
