added a missing paragraph closing tag after step 3 in baking

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -62,7 +62,7 @@
 
         <p>2.) For best results use a 1.5 inch scoop to place the dough in tablespoonfuls onto a parchment lined baking tray, leaving ample room for spreading.</p>
 
-        <p>3.) Sprinkle each ball with a pinch of sea salt.
+        <p>3.) Sprinkle each ball with a pinch of sea salt.</p>
         <img src="../img/salt.jpg" alt="several balls of cookie dough laid out onto a baking sheet lined with parchment paper, sprinkled with sea salt">
 
         <p>4.) Bake for 9 minutes. The time at which you remove the cookies from the oven is extremely important. After the 9 minute mark we will check the progess of color and puffiness. If you preheated your oven, after 9 minutes the cookies ought to be soft, puffy and light in color but not quite golden brown. If the cookies are on track, bake for an additional 2-3 minutes, standing next to the oven checking after every minute passes.</p>
