--- a/index.html
+++ b/index.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Odin Recipes</title>
-
+   <meta charset="utf-8">
+   <title>Random Recipes</title>
+   <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="header">Random Recipes</h1>
+    <img src="https://static.wikia.nocookie.net/charactercommunity/images/1/10/Swedish_Chef.jpg/revision/latest?cb=20190709165116">
+
     <ul>
         <li><a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a></li>
         <li><a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a></li>
         <li><a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a></li>
         <li><a href="../odin-recipes/recipes/cookies.html">Best Chocolate Chip Cookies You've Never Had in Your Life</a></li>
     </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
