changed css on index, added css to cookies.html

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Best Chocolate Chip Cookies You've Never Had in Your Life</title>
+        <link rel="stylesheet" href="../recipes/style.css">
     </head>
 
     <body>
-        <h1>Best Chocolate Chip Cookies You've Never Had in Your Life</h1>
+        <h1>Best Chocolate Chip Cookies Ever</h1>
         <img src="../img/cookies.JPG" alt="stacks of chocolate chip cookies neatly piled atop one another showcasing their crispy edges and soft centers">
-        <p>The type of chocolate you use in this recipe is really up to you. I prefer Nestle Tollhouse semi-sweet morsels. I also use a medium 1.5 inch cookie scoop tool to place the cookies onto the sheet for baking. Take note that making the cookie dough is only just the beginning. You must allow 36 hours of chilling time in the fridge. It will be tempting to bake them before then but it is <em>imperative</em> that you wait.</p>
-
-        <h3>Ingredients</h3>
+        <p class="first">The type of chocolate you use in this recipe is really up to you. I prefer Nestle Tollhouse semi-sweet morsels. I also use a medium 1.5 inch cookie scoop tool to place the cookies onto the sheet for baking. Take note that making the cookie dough is only just the beginning. You must allow 36 hours of chilling time in the fridge. It will be tempting to bake them before then but it is <strong><em>imperative</em></strong> that you wait.</p>
+        
+        <h3 class="header-margin">Ingredients</h3>
+        <div class="list">
             <ul>
                 <li>1 & 1/4 cups (or 2 & 1/2 sticks) unsalted butter, softened</li>
                 <li>1 & 1/4 cup light brown sugar (10oz)</li>
@@ -25,6 +27,7 @@
                 <li>450g chocolate chips or chunks of your choice (1 pound)</li>
                 <li>parchment paper</li>
             </ul>
+        </div>
 
         <h3>Mixing</h3>
 
@@ -69,21 +72,22 @@
 
         <p>5.) Remove the cookies from the oven when these conditions have been met:</p>
             <ul>
-                <li>they have a light golden brown hue, slightly darker at the edges than the middle</li>
-                <li>they are still puffed up</li>
+                <li class="listy">they have a light golden brown hue, slightly darker at the edges than the middle</li>
+                <li class="listy">they are still puffed up</li>
             </ul>
 
         <p>6.) Remove cookies from the baking sheet onto a flat cool surface so that they can deflate and cool.</p>
         <img src="../img/finish.jpg" alt="freshly baked chocolate chip cookies on a cooling rack">
 
-        <h3>Baker's Notes</h3>
+        <h3 id="note">Baker's Notes</h3>
+        <div class="end">
         <p>There are three <strong>critical</strong> moments in the making of these cookies. These cookies are meant to have a light crisp around the edges and a soft middle. So if you take special care around these three critical areas you may very well succeed.</p>
             <ol>
                 <li>First, the correct amount of melting applied to the butter, so that when you mix it with the sugars it results in a pale light color and fluffy consistency.</li>
                 <li>The long agonizing 36 hour chill time in the refrigerator. This is essential. The ingredients need time to settle in, form with each other and become one!</li>
                 <li>Lastly, removal from the oven at the right time. A light golden coloring and still puffy.</li>
             </ol>
-
+        </div>
 
     </body>
 </html>
