--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 class="header">Random Recipes</h1>
-    <img src="https://static.wikia.nocookie.net/charactercommunity/images/1/10/Swedish_Chef.jpg/revision/latest?cb=20190709165116" alt="a puppet chef waving with a spoon in his hand">
+    <img src="https://static.wikia.nocookie.net/charactercommunity/images/1/10/Swedish_Chef.jpg" alt="a puppet chef waving with a spoon in his hand">
 
     <ul>
         <li><a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a></li>
