removed lasagna to add apple pie for baking recipes theme

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -10,7 +10,7 @@
         <img src="../img/brownies.jpg" alt="several freshly baked brownies cut into squares">
             
         <h3>Description</h3>
-                <p>These homemade chewy brownies are this, chewy, fudgy and made completely from scratch. You'll never need to use a box mix again!</p>
+                <p>These homemade chewy brownies are thick, chewy, fudgy and made completely from scratch. You'll never need to use a box mix again!</p>
 
             
          <h3>Ingredients</h3>
