--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>Random Recipes</title>
+   <title>Baking Recipes</title>
    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <h1 class="header">Random Recipes</h1>
+    <h1 class="header">Baking Recipes</h1>
     <img src="../odin-recipes/img/chef.jpg" alt="a puppet chef waving with a spoon in his hand">
 
     <ul>
-        <li><a href="../odin-recipes/recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="../odin-recipes/recipes/chicken.html">Chicken, Sausage, Peppers and Potatoes</a></li>
+        <li><a href="../odin-recipes/recipes/pie.html">Grandma Ople's Apple Pie</a></li>
+        <li><a href="../odin-recipes/recipes/brownies.html">Chewy Brownies</a></li>
         <li><a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a></li>
         <li><a href="../odin-recipes/recipes/cookies.html">Best Chocolate Chip Cookies Ever</a></li>
     </ul>
