--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="../odin-recipes/recipes/pie.html">Grandma Ople's Apple Pie</a></li>
         <li><a href="../odin-recipes/recipes/brownies.html">Chewy Brownies</a></li>
-        <li><a href="../odin-recipes/recipes/ribs.html">Mississippi Beef Short Ribs</a></li>
+        <li><a href="../odin-recipes/recipes/muffins.html">Jordan Marsh's Blueberry Muffins</a></li>
         <li><a href="../odin-recipes/recipes/cookies.html">Best Chocolate Chip Cookies Ever</a></li>
     </ul>
 
