--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Jordan Marsh's Blueberry Muffins</title>
     </head>
 
     <body>
-        <h1></h1>
+        <h1>Jordan Marsh's Blueberry Muffins</h1>
         <img src="../img/muffins.jpg" alt="six freshly baked golden blueberry muffins sprinkled with sugar">
         
         <h3>Description</h3>
