added stylesheet link to other pages

--- a/recipes/pie.html
+++ b/recipes/pie.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>Grandma Ople's Apple Pie</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Grandma Ople's Apple Pie</h1>
      <img src="../img/pie.jpg" alt="a round apple pie with a lattice work top sitting on a table">
       <h3>Description</h3>
-        <p>If you like apple pie then Grandma Ople's recipe is here for you. The internet is abuzz with this popular recipe. Lattice work on the top is optional, dependent on skill but sure can look mighty pretty!</p>
+        <p>If you like apple pie then Grandma Ople's recipe is here for you. The internet is abuzz with this popular recipe! Lattice work on the top is optional and dependent on skill, but it sure can look mighty pretty!</p>
     <h3>Ingredients</h3>
         <ul>
             <li>1 recipe pastry for a 9 inch double crust pie </li>
