--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <h1 class="header">Baking Recipes</h1>
     <img src="../odin-recipes/img/chef.jpg" alt="a puppet chef waving with a spoon in his hand">
 
+    <div>
     <ul>
         <li><a href="../odin-recipes/recipes/pie.html">Grandma Ople's Apple Pie</a></li>
         <li><a href="../odin-recipes/recipes/brownies.html">Chewy Brownies</a></li>
         <li><a href="../odin-recipes/recipes/muffins.html">Jordan Marsh's Blueberry Muffins</a></li>
         <li><a href="../odin-recipes/recipes/cookies.html">Best Chocolate Chip Cookies Ever</a></li>
     </ul>
-
+    </div>
 
 </body>
 </html>
