--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Jordan Marsh's Blueberry Muffins</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
